# claude-box

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  berm.sh  claude-box.sh  clippy.toml  go.mod  install.sh  main.go
.github/workflows/: _build-binaries.yml  nightly.yml  release.yml
docs/runbooks/: release.md
image/: Dockerfile  Makefile  entrypoint.sh
image/base/: Dockerfile  entrypoint.sh
internal/vhrn/: alias.go  alias_test.go  cli.go  config.go  config_test.go  engine.go  engine_test.go  env.go  env_test.go  flags.go  flags_test.go  guide.go  harness.go  harness_test.go  images.go  images_test.go  install.go  install_test.go  list.go  net.go  net_test.go  proxy.go  proxy_test.go  registry.go  registry_test.go  run.go  run_test.go  sandbox.go  toolchain.go  toolchain_test.go  uninstall.go  uninstall_test.go  usage.go
proxy/: Dockerfile  go.mod  main.go
proxy/egress/: denylog.go  dialer.go  dialer_test.go  doc.go  matcher.go  matcher_test.go  mode.go  mode_test.go  policy.go  policy_test.go  proxy.go  proxy_test.go
src/: cli.rs  config.rs  env.rs  harness.rs  image.rs  lib.rs  logging.rs  main.rs  net.rs  persist.rs  registry.rs  run.rs  shell.rs
