[package]
name = "vhrn"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lints.clippy]
# cargo_common_metadata still wants description/repository/keywords/categories (crates.io
# publishing fields); vhrn ships as a GitHub-release binary, not a published crate, so
# that lint stays allowed even with the license declared. Both groups sit below the
# override's priority, else Cargo's lint_groups_priority rejects the group + member.
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"

[dependencies]
anyhow = "1.0.104"
hex = "0.4.3"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = { version = "1.0.151", features = ["arbitrary_precision"] }
sha2 = "0.11.0"
signal-hook = "0.4.4"
toml = "1.1.3"
