[package]
name = "vhrn"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Run coding agents in a filesystem- and network-jailed container"
repository = "https://github.com/aravind-n/vhrn"
keywords = ["sandbox", "container", "agent", "egress", "cli"]
categories = ["command-line-utilities", "development-tools", "virtualization"]

[lints.clippy]
cargo = "warn"
pedantic = "warn"

[dependencies]
anyhow = "1.0.104"
hex = "0.4.3"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = { version = "1.0.151", features = ["arbitrary_precision"] }
sha2 = "0.11.0"
signal-hook = "0.4.4"
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ureq = "3.3.0"
